# codetranslator

./: README-ES.md  README-FR.MD  README-FR.md  README-IT.md  README-NL.md  README-RU.md  README-ZH.md  README.md  pyproject.toml
src/code_translate/: cli.py  git.py  languages.py  writers.py
src/code_translate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/codetranslate/: __init__.py  languages.py  parsers.py  translator.py
src/codetranslate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_git.py  test_languages.py  test_parsers.py  test_writers.py
tests/fixtures/: sample.js  sample.md  sample.py
